feat: Implement GET /subscriptions/:id.
